--- a/src/core/utils/overflow.scss
+++ b/src/core/utils/overflow.scss
@@ -1,7 +1,7 @@
 @import '../../../helpers/_functions';
 @import '../../../helpers/_size';
 
-$overflow: ('auto', 'hidden', 'visible', 'scroll');
+$overflow: (auto, hidden, visible, scroll);
 @include generate-classes-for-viewport(
     $overflow,
     'overflow',
